<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name of the application. [CHAR LIMIT=35] -->
    <string name="app_label">Input Devices</string>

    <!-- Keyboard layouts label, used to describe the set of all built-in layouts in the UI. [CHAR LIMIT=35] -->
    <string name="keyboard_layouts_label">Android keyboard</string>

    <!-- CA English keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_ca_label">English (Canada)</string>

    <!-- UK English keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_uk_label">English (UK)</string>

    <!-- US English keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_us_label">English (US)</string>

    <!-- US English (International style) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_us_intl">English (US), International style</string>

    <!-- US English (Colemak style) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_us_colemak_label">English (US), Colemak style</string>

    <!-- US English (Dvorak style) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_us_dvorak_label">English (US), Dvorak style</string>

    <!-- US English (Workman style) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_us_workman_label">English (US), Workman style</string>

    <!-- German keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_german_label">German</string>

    <!-- French keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_french_label">French</string>

    <!-- Canadian French keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_french_ca_label">French (Canada)</string>

    <!-- Russian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_russian_label">Russian</string>

    <!-- Russian (Mac style) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_russian_mac_label">Russian, Mac style</string>

    <!-- Spanish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_spanish_label">Spanish</string>

    <!-- Swiss French keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_swiss_french_label">Swiss French</string>

    <!-- Swiss German keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_swiss_german_label">Swiss German</string>

    <!-- Belgian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_belgian">Belgian</string>

    <!-- Bulgarian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_bulgarian">Bulgarian</string>

    <!-- Bulgarian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_bulgarian_phonetic">Bulgarian, Phonetic</string>

    <!-- Italian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_italian">Italian</string>

    <!-- Danish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_danish">Danish</string>

    <!-- Norwegian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_norwegian">Norwegian</string>

    <!-- Swedish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_swedish">Swedish</string>

    <!-- Finnish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_finnish">Finnish</string>

    <!-- Croatian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_croatian">Croatian</string>

    <!-- Czech keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_czech">Czech</string>

    <!-- Czech qwerty keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_czech_qwerty">Czech QWERTY style</string>

    <!-- Estonian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_estonian">Estonian</string>

    <!-- Hungarian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_hungarian">Hungarian</string>

    <!-- Icelandic keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_icelandic">Icelandic</string>

    <!-- Brazilian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_brazilian">Brazilian</string>

    <!-- Portuguese keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_portuguese">Portuguese</string>

    <!-- Slovak keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_slovak">Slovak</string>

    <!-- Slovak (QWERTY style) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_slovak_qwerty">Slovak, QWERTY style</string>

    <!-- Slovenian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_slovenian">Slovenian</string>

    <!-- Turkish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_turkish">Turkish</string>

    <!-- Turkish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_turkish_f">Turkish F</string>

    <!-- Ukrainian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_ukrainian">Ukrainian</string>

    <!-- Arabic keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_arabic">Arabic</string>

    <!-- Greek keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_greek">Greek</string>

    <!-- Hebrew keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_hebrew">Hebrew</string>

    <!-- Lithuanian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_lithuanian">Lithuanian</string>

    <!-- Spanish (Latin) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_spanish_latin">Spanish (Latin)</string>

    <!-- Latvian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_latvian">Latvian</string>

    <!-- Persian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_persian">Persian</string>

    <!-- Azerbaijani keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_azerbaijani">Azerbaijani</string>

    <!-- Polish keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_polish">Polish</string>

    <!-- Belarusian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_belarusian">Belarusian</string>

    <!-- Mongolian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_mongolian">Mongolian</string>

    <!-- Georgian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_georgian">Georgian</string>

    <!-- Thai (Kedmanee variant) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_thai_kedmanee">Thai (Kedmanee)</string>

    <!-- Thai (Pattachote variant) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_thai_pattachote">Thai (Pattachote)</string>

    <!-- Serbian (Latin) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_serbian_latin">Serbian (Latin)</string>

    <!-- Montenegrin (Latin) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_montenegrin_latin">Montenegrin (Latin)</string>

    <!-- Serbian (Cyrillic) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_serbian_cyrillic">Serbian (Cyrillic)</string>

    <!-- Montenegrin (Cyrillic) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_montenegrin_cyrillic">Montenegrin (Cyrillic)</string>

    <!-- Romanian keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_romanian">Romanian</string>

    <!-- English (India) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_english_india">English (India)</string>

    <!-- Sony Playstation game controller button with circle drawn on it. [CHAR LIMIT=35] -->
    <string name="playstation_controller_circle_button">Circle button</string>

    <!-- Sony Playstation game controller button with triangle drawn on it. [CHAR LIMIT=35] -->
    <string name="playstation_controller_triangle_button">Triangle button</string>

    <!-- Sony Playstation game controller button with square drawn on it. [CHAR LIMIT=35] -->
    <string name="playstation_controller_square_button">Square button</string>

    <!-- Sony Playstation game controller button with cross drawn on it. [CHAR LIMIT=35] -->
    <string name="playstation_controller_cross_button">Cross button</string>

    <!-- Default game controller down button. [CHAR LIMIT=35] -->
    <string name="default_game_controller_down_button">Down button</string>

    <!-- Default game controller left button. [CHAR LIMIT=35] -->
    <string name="default_game_controller_left_button">Left button</string>

    <!-- Default game controller right button. [CHAR LIMIT=35] -->
    <string name="default_game_controller_right_button">Right button</string>

    <!-- Default game controller up button. [CHAR LIMIT=35] -->
    <string name="default_game_controller_up_button">Up button</string>

    <!-- Nintendo game controller L button. [CHAR LIMIT=35] -->
    <string name="nintendo_game_controller_l_button">L button</string>

    <!-- Nintendo game controller R button. [CHAR LIMIT=35] -->
    <string name="nintendo_game_controller_r_button">R button</string>

    <!-- Nintendo game controller ZL button. [CHAR LIMIT=35] -->
    <string name="nintendo_game_controller_zl_button">ZL button</string>

    <!-- Nintendo game controller ZR button. [CHAR LIMIT=35] -->
    <string name="nintendo_game_controller_zr_button">ZR button</string>

    <!-- Xbox game controller LB button. [CHAR LIMIT=35] -->
    <string name="xbox_game_controller_lb_button">LB button</string>

    <!-- Xbox game controller RB button. [CHAR LIMIT=35] -->
    <string name="xbox_game_controller_rb_button">RB button</string>

    <!-- Xbox game controller LT button. [CHAR LIMIT=35] -->
    <string name="xbox_game_controller_lt_button">LT button</string>

    <!-- Xbox game controller RT button. [CHAR LIMIT=35] -->
    <string name="xbox_game_controller_rt_button">RT button</string>
</resources>
