<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2026 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<keyboard-glyph-map xmlns:androidprv="http://schemas.android.com/apk/prv/res/android">
    <key-glyph
        androidprv:keycode="KEYCODE_BUTTON_A"
        androidprv:glyphDrawable="@drawable/playstation_controller_cross_button"
        androidprv:displayName="@string/playstation_controller_cross_button"/>
    <key-glyph
        androidprv:keycode="KEYCODE_BUTTON_B"
        androidprv:glyphDrawable="@drawable/playstation_controller_circle_button"
        androidprv:displayName="@string/playstation_controller_circle_button"/>
    <key-glyph
        androidprv:keycode="KEYCODE_BUTTON_Y"
        androidprv:glyphDrawable="@drawable/playstation_controller_triangle_button"
        androidprv:displayName="@string/playstation_controller_triangle_button"/>
    <key-glyph
        androidprv:keycode="KEYCODE_BUTTON_X"
        androidprv:glyphDrawable="@drawable/playstation_controller_square_button"
        androidprv:displayName="@string/playstation_controller_square_button"/>
</keyboard-glyph-map>